# projects/formulator-responder/src/external/api/wire/spill-with-schema.dto.ts
@@ -1,0 +1,15 @@
+import { SpillWithSchema } from '../../../app/app-store';
+
+type WireDates = {
+  createdAt: string;
+  lastModifiedAt: string | null;
+  completedAt: string | null;
+  sentAt: string;
+  expiredAt: string | null;
+};
+
+export type SpillWithSchemaDto = Omit<
+  SpillWithSchema,
+  'createdAt' | 'lastModifiedAt' | 'completedAt' | 'sentAt' | 'expiredAt'
+> &
+  WireDates;
